--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -21,7 +21,7 @@ jobs:
         PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         DOCKERFILE: Dockerfile
         IMAGE_NAME: premake
-        TAG_NAME: ${{ GITHUB_SHA }}
+        TAG_NAME: ${{ github.sha }}
         LATEST: false
   linux:
     runs-on: ubuntu-latest
