--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -20,7 +20,7 @@ jobs:
         USERNAME: ${{ secrets.DOCKER_USERNAME }}
         PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         DOCKERFILE: Dockerfile
-        IMAGE_NAME: premake
+        IMAGE_NAME: josephbmanley/premake
         TAG_NAME: ${{ github.run_number }}
         LATEST: false
   linux:
